gary/simon #869 fixed js for filter on mobile and added spacing

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_primaryFilter.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_primaryFilter.scss
@@ -62,7 +62,7 @@
 
     @media #{$mobile} {
         button {
-            margin-top: 10px;
+            margin-top: 30px;
         }
     }
 }
@@ -190,6 +190,7 @@ button {
         background-color: #666666;
         width: 100%;
         font-weight: 600;
+        margin-top: 15px;
     }
 }
 
@@ -303,4 +304,6 @@ primary-filter-form-mobile {
             margin-left: 5px;
         }
     }
+    
 }
+
